# lenia-web

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  ControlPanel.svelte  app.css  compute.rs  compute.wgsl  initializer.js  lib.rs  random.rs  random.wgsl  render.rs  render.wgsl  state.rs
src-rust/: Cargo.toml
src-rust/src/: compute.rs  compute.wgsl  initializer.js  lib.rs  main.rs  random.rs  random.wgsl  render.rs  render.wgsl  state.rs  storage_manager.rs  uniforms_manager.rs
src-rust/src/fft_compute/: fft.rs  fft.wgsl  growth.rs  growth.wgsl  kernel.rs  kernel.wgsl  mod.rs  pad_wrap.rs  pad_wrap.wgsl  transpose.rs  transpose.wgsl
src/lib/: Parameter.svelte  ParameterGroup.svelte  ScaleTuner.svelte  SvgButton.svelte
