[package]
name = "lenia-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.28"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["Window", "Document", "HtmlElement", "Text", "GpuCanvasContext"] }
wgpu = { version = "27.0.1", features = ["web"]}
